<resources>
    <string name="app_name">MVVMTVShows</string>
    <string name="tv_shows_most_popular">TV Shows|Mort Popular</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Line</string>
    <string name="u2022">*</string>
    <string name="website">Website</string>
    <string name="episodes">Episodes</string>
    <string name="watchlist">WatchList</string>
    <string name="search_tv_show">Search TV Show</string>
</resources>